Fix for icon overflows, adds Flickr, Google Play and Delicious buttons

--- a/css/zocial.css
+++ b/css/zocial.css
@@ -68,6 +68,8 @@ a.zocial {
 	-moz-box-shadow: 0.075em 0 0 rgba(255,255,255,0.25);
 	-webkit-box-shadow: 0.075em 0 0 rgba(255,255,255,0.25);
 	box-shadow: 0.075em 0 0 rgba(255,255,255,0.25);
+	
+	-webkit-font-smoothing: antialiased;
 }
 
 .zocial:active {
@@ -82,6 +84,7 @@ a.zocial {
 	padding-left: 0;
 	padding-right: 0;
 	max-height: 2.15em;
+	white-space: nowrap;
 }
 .zocial.icon::before {
 	padding: 0;
@@ -232,6 +235,7 @@ a.zocial {
 .zocial.chrome::before {content: "\E03A";}
 .zocial.cloudapp::before {content: "\E042";}
 .zocial.creativecommons::before {content: "\E022";}
+.zocial.delicious::before {content: "\E002";}
 .zocial.disqus::before {content: "\E030";}
 .zocial.dribbble::before {content: "\E023";}
 .zocial.dropbox::before {content: "\E043"; color: #1f75cc;}
@@ -243,11 +247,13 @@ a.zocial {
 .zocial.facebook::before {content: "\E045";}
 .zocial.fivehundredpx::before {content: "\E00F"; color: #29b6ff;}
 .zocial.flattr::before {content: "\E004";}
+.zocial.flickr::before {content: "\E025";}
 .zocial.forrst::before {content: "\E019"; color: #50894f;}
 .zocial.foursquare::before {content: "\E013";}
 .zocial.github::before {content: "\E046";}
 .zocial.gmail::before {content: "\E04C"; color: #f00;}
 .zocial.google::before {content: "\E026";}
+.zocial.googleplay::before {content: "\E05E";}
 .zocial.googleplus::before {content: "\E00A";}
 .zocial.gowalla::before {content: "\E01F";}
 .zocial.grooveshark::before {content: "\E017";}
@@ -308,6 +314,7 @@ a.zocial {
 .zocial.chrome {background-color: #006cd4;}
 .zocial.cloudapp {background-color: #fff; color: #312c2a;}
 .zocial.creativecommons {background-color: #000;}
+.zocial.delicious {background-color: #3271cb;}
 .zocial.disqus {background-color: #5d8aad;}
 .zocial.dribbble {background-color: #ea4c89;}
 .zocial.dropbox {background-color: #fff; color: #312c2a;}
@@ -319,11 +326,13 @@ a.zocial {
 .zocial.facebook {background-color: #4863ae;}
 .zocial.fivehundredpx {background-color: #333;}
 .zocial.flattr {background-color: #8aba42;}
+.zocial.flickr {background-color: #ff0084;}
 .zocial.forrst {background-color: #1e360d;}
 .zocial.foursquare {background-color: #44a8e0;}
 .zocial.github {background-color: #fbfbfb; color: #050505;}
 .zocial.gmail {background-color: #efefef; color: #222;}
 .zocial.google {background-color: #4e6cf7;}
+.zocial.googleplay {background-color: #000;}
 .zocial.googleplus {background-color: #dd4b39;}
 .zocial.gowalla {background-color: #ff720a;}
 .zocial.grooveshark {background-color: #111; color:#eee;}
@@ -342,7 +351,7 @@ a.zocial {
 .zocial.myspace {background-color: #000;}
 .zocial.ninetyninedesigns {background-color: #fff; color: #072243;}
 .zocial.openid {background-color: #f5f5f5; color: #333;}
-.zocial.paypal {background-color: #ff921d; color: #032751; text-shadow: 0 1px 0 rgba(255,255,255,0.5);}
+.zocial.paypal {background-color: #fff; color: #32689a; text-shadow: 0 1px 0 rgba(255,255,255,0.5);}
 .zocial.pinboard {background-color: blue;}
 .zocial.pinterest {background-color: #c91618;}
 .zocial.plancast {background-color: #e7ebed; color: #333;}
